--- a/Lyoko/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Lyoko/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Zmień hasło";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
-
+<div>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
@@ -30,6 +30,7 @@
             </a>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
